syntax = "proto3";

package kvserver;

service Kv {

    rpc Get (GetRequest) returns (GetResponse) {}
    rpc Put (PutRequest) returns (PutResponse) {}
    rpc Delete (DeleteRequest) returns (DeleteResponse) {}
    rpc Scan (ScanRequest) returns (ScanResponse) {}
}

message GetRequest {
    string key = 1;
}
message GetResponse {
    string error = 1;
    string value = 2;
    bool empty = 3;
}

message PutRequest {
    string key = 1;
    string value = 2;
}

message PutResponse {
    string error = 1;
}

message DeleteRequest {
    string key = 1;
}
message DeleteResponse {
    string error = 1;
}

message ScanRequest {
    string key_begin = 1;
    string key_end = 2;
}

message ScanResponse {
    string error = 1;
    map<string, string> key_value = 2;
    bool empty = 3;
}

